<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_horizontal|center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_usser"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/e_usser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:ems="10"/>
    <TextView
        android:id="@+id/text_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_pass"
        android:textStyle="bold"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/e_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:ems="10" />

    <TextView
        android:id="@+id/tyc_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tyc"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:textSize="19dp"
        />
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordar_user"
        android:layout_marginTop="10sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="24dp"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:backgroundTint="@color/purple_200"
            android:text="@string/btn_ingresar"
            android:layout_marginEnd="4dp"/>

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:backgroundTint="@color/teal_700"
            android:text="@string/btn_crearCuenta"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

</LinearLayout>