<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarLibroActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Agregar_libro"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nombre_del_libro"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/nombre_de_libro"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Autor"
        android:textSize="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"/>

    <EditText
        android:id="@+id/nombre_de_autor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Guardar"

        />

</LinearLayout>